Fix show truncated title as help in form button widget
When help is not defined and button title is truncated then it should show full title as tooltip on hover of button widget.

See issue #874

--- a/axelor-front/src/views/form/widgets/button/button.module.scss
+++ b/axelor-front/src/views/form/widgets/button/button.module.scss
@@ -35,9 +35,17 @@ div.button[disabled] {
   justify-content: center;
   gap: 0.5rem;
 }
+.titleText {
+  flex: 1;
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
 
 .help .title {
   display: inline-flex;
+  max-width: calc(100% - 0.5rem);
 }
 
 .help::after {
